[tool.poetry]
name = "migra"
version = "3.0"
authors = [ "Robert Lechte <robertlechte@gmail.com>",]
license = "Unlicense"
readme = "README.md"
description = "Like `diff` but for PostgreSQL schemas"

repository = "https://github.com/djrobstep/migra"
homepage = "https://databaseci.com/docs/migra"

[tool.poetry.dependencies]
python = ">=3.9,<4"
sqlbag = "*"
six = "*"
schemainspect = { git = "https://github.com/joshainglis/schemainspect.git", rev = "0a0ca10de4d3264693e0e5a3e0a0d5f46b8e2e52" }
#schemainspect = { path = "../schemainspect", develop = true }
psycopg2 = { version="*", optional = true }
networkx = "^3.1"

[tool.poetry.dev-dependencies]
sqlbag = "*"
pytest = "*"
pytest-cov = "*"
pytest-clarity = "*"
psycopg2 = "*"
flake8 = "*"
isort = "*"
black = "*"
toml = "*"

[tool.poetry.scripts]
migra = 'migra:do_command'

[tool.poetry.extras]
pg = ["psycopg2"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
