[project]
name = "migra-maintained"
version = "1.1.0"
authors = [{ name = "Robert Lechte", email = "robertlechte@gmail.com" }]
license = "Unlicense"
readme = "README.md"
description = "Like `diff` but for PostgreSQL schemas"

[tool.poetry]
packages = [{ include = "migra" }]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install poetry; poetry install; poetry build"

[project.urls]
repository = "https://github.com/djrobstep/migra"
homepage = "https://databaseci.com/docs/migra"

[tool.poetry.dependencies]
python = ">=3.9,<4"
sqlbag = "*"
six = "*"
schema-inspect-maintained = ">=1.1.2"
psycopg2-binary = { version=">=2.9.7,<3", optional = true }
greenlet = "^3.2.2"
setuptools = "^80.8.0"

[tool.poetry.group.dev.dependencies]
# schema-inspect-maintained = {path="../schemainspect", develop=true}
sqlbag = "*"
pytest = "*"
pytest-cov = "*"
pytest-clarity = "*"
psycopg2-binary = ">=2.9.7,<3"
flake8 = "*"
isort = "*"
black = "*"
toml = "*"
python-dotenv = "^1.1.0"

[tool.poetry.scripts]
migra = 'migra:do_command'

[tool.poetry.extras]
pg = ["psycopg2-binary"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
